--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <section id="login">
             <div id="imagem">
-                foto
+                Foto
             </div>
             <div id="formulario">
                 <h1>Login</h1>
